burger menu visibility fix

--- a/public/main.css
+++ b/public/main.css
@@ -16,13 +16,14 @@ body {
 
 .menu-bars {
   font-size: 1.9vw;
-  margin-left: 2rem;
-  background: none;
+  margin-left: 0rem;
+  background-size: 0%;
+  background: #80bdff;
 }
 
 .nav-menu {
   background-color: #212529;
-  width: 250px;
+  width: 240px;
   height: 100vh;
   display: flex;
   justify-content: center;
@@ -65,6 +66,7 @@ body {
 
 .nav-menu-items{
   width: 100%;
+  padding: 10px 0px;
 }
 
 .navbar-toggle{
